[workspace]
resolver = "2"
# members = ["systems", "components"]

[package]
name = "bin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1" }
bevy-inspector-egui = "0.14.0"
rand = "0.8.5"

#smooth-bevy-cameras = "0.6.0"

#components = { path = "components" }
#hot-lib-reloader = { version = "0.6.4", optional = true }
#systems = { path = "systems" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

